--- a/leadapp-practice/build.properties
+++ b/leadapp-practice/build.properties
@@ -12,7 +12,7 @@ javac.dest          = ${dist}/classes/
 jar.dest            = ${dist}/lib/
 
 
-tomcat.home         = C:/Apache/Tomcat5.5
+tomcat.home         = "C:\Program Files\Apache Software Foundation\Tomcat 7.0"
 tomcat.webapps      = ${tomcat.home}/webapps
 tomcat.work         = ${tomcat.home}/work/Standalone/localhost
 tomcat.sharedlib    = ${tomcat.home}/shared/lib
